fix navbar alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,8 +10,8 @@ body{
 }
 
 *{
-    padding-left: 0.1rem;
-    padding-right: 0.1rem;
+    /* padding-left: 0.1rem;
+    padding-right: 0.1rem; */
 }
 
 .imagePro{
